# fwmav_sim_sjtu

./: .gitignore  CMakeLists.txt  README
config/: mav_config_list.json  sensor_config.json  sim_config.json
examples/: demo.cpp  imgui.cpp  main.cpp  test.json
include/cjson/: CJsonObject.hpp
include/flappy_dart/: Actuator.h  Flappy.h  SerialPIDController.h  ServoD1302.h  SimEnv.h  SimPanel.h  Wing.h
include/sensor/: EKFFusion.h  Filter.h  Madgwick.h  SensorFusion.h  VirtualSensor.h
launch/: acc_debug.launch
rviz/: acc_debug.rviz
src/: Actuator.cpp  Flappy.cpp  SerialPIDController.cpp  ServoD1302.cpp  SimEnv.cpp  SimPanel.cpp  Wing.cpp  sim_main.cpp
src/cjson/: CJsonObject.cpp  cJSON.c
src/sensor/: EKFFusion.cpp  Madgwick.cpp  SensorFusion.cpp  VirtualSensor.cpp
urdf/fwmav/: flapper_sc_nominal.urdf
urdf/fwmav_sjtu/: flapper_sjtu.urdf
